--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Apple CSS Lab</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -10,6 +11,10 @@
   <div id="banner">
     <h1>iPad</h1>
     <h2>Just as stunning.<br />Twice as fast.</h2>
+  </div>
+
+  <div id="coverPhoto">
+    <img src="images/hero.png" alt="hero">
   </div>
 
   <div class="section" id="why-love">
